[package]
name = "rust-merchant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "./src/bin/app.rs"

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-macros = "0.4.1"
anyhow = "1.0.81"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
config = { version = "0.14.0" }
fake = { version = "2.9.2", features = ["derive", "uuid", "chrono"] }
futures = "0.3.30"
log = "0.4.21"
once_cell = "1.19.0"
strum = { version = "0.26.2", features = ["derive"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
garde = { version = "0.18.0", features = ["full"] }
thiserror = "1.0.58"
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }